--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 
         function showBirthdayMessage() {
             const birthdayMessage = document.getElementById('birthday-message');
-            birthdayMessage.innerHTML = "Пусть всё загаданное сбудется! <br> Ты самая лучшая! Люблю тебя моя сестра! ❤️❤️❤️<br> Будь счастлива, любима и здоровa!❤️❤️❤️ Happy Birthday!";
+            birthdayMessage.innerHTML = "Пусть всё загаданное сбудется! <br> Ты самая лучшая! Люблю тебя моя сестра! ❤️❤️❤️<br> ❤️Будь счастлива, любима и здорова! Happy Birthday!";
             birthdayMessage.style.opacity = 1; // Убедитесь, что текст полностью виден
         }
 
